--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,8 @@ body {
 	font-size: 14px;
 	text-align: center;
 }
-.txt{margin: 0 auto ;}
-.logo{
-	margin: 10vh auto ;
-	text-align: center;
-	height: 100px;
-    max-width: 80%;
-}
+.txt{margin: 20vh auto ;}
+
 .meter { 
 	margin: 0 auto;
 	width: 80%;
